--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- favicon -->
   
   <!-- normalize -->
-  <link rel="stylesheet" href="../common/normalize.css">
+  <link rel="stylesheet" href="common/normalize.css">
   
   <!-- style css -->
   <link rel="stylesheet" href="yozmM.css">
